# MonsterLM

./: DESCRIPTION  NAMESPACE  README.md
R/: extendr-wrappers.R
man/: monsterlm-package.Rd  plink_qc.Rd
src/: .gitignore  Makevars  Makevars.win  entrypoint.c  monsterlm-win.def
src/rust/: Cargo.toml  rustfmt.toml
src/rust/src/: lib.rs
