[package]
name = 'monsterlm'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'monsterlm'

[dependencies]
extendr-api = '*'
rayon = "1.10.0"
faer = "0.19"
# lmutils = { version = "0.1", path = "../../../../lmutils" }
# lmutils = "0.1"
lmutils = { version = "0.1", git = "https://github.com/mrvillage/lmutils" }
regex = "1.10.5"
